--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "git-publish": "bash scripts/publish.sh"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.5.0",
+    "@vueuse/core": "^2.0.27",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "view-design": "^4.0.0",
+    "view-design": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "zingchart-vue": "^1.0.2"
@@ -25,9 +27,9 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-iview": "^2.0.0",
