--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run
-        run: echo "${{ github }}"
+        run: echo "${{ fromJson(github) }}"
