--- a/.github/workflows/close.yml
+++ b/.github/workflows/close.yml
@@ -13,4 +13,6 @@ jobs:
 
     steps:
       - name: Closing
-        run: echo "${{ fromJson(github) }}"
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
