--- a/.github/workflows/close.yml
+++ b/.github/workflows/close.yml
@@ -16,3 +16,15 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
+
+      - name: Save PR number
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+        run: |
+          mkdir -p pr
+          echo $PR_NUMBER > pr/pr_number
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pr_number
+          path: pr
