--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -13,3 +13,15 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
+
+      - name: Download artifact
+        id: download-artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          run_id: ${{ github.event.workflow_run.id }
+          name: pr_number
+
+      - name: Log
+        run: |
+          ls
+          cat pr/pr_number
