--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,7 +18,7 @@ jobs:
         id: download-artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          run_id: ${{ github.event.workflow_run.id }
+          run_id: ${{ github.event.workflow_run.id }}
           name: pr_number
 
       - name: Log
